--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     </div>
 
 
-    <div class="main">
+<div class="main">
 
       <div class="top">
-        <div class="toumei">
 
        <div class="container">
         <div class="profile">
@@ -45,7 +44,7 @@
           </ul>
         </div>
        </div>
-<a href="#"></a>
+
        <div class="btn-wrapper">
 
         <img class="line" src="img/line-qr.jpg" alt="">
@@ -65,12 +64,12 @@
        </a>
        </div>
 
-
-
-    </div>
+  </div>
+</div>
 
     <div class="footer">
       <div class="container">
+      <div class="footer-left">
 
       <h1>MY.KZYM</h1>
       <h1>MY.KZYM</h1>
@@ -81,6 +80,7 @@
       <h1>MY.KZYM</h1>
       <h1>MY.KZYM</h1>
 
+    </div>
      </div>
 
     </div>
