--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   <script src="https://kit.fontawesome.com/d03a255907.js" crossorigin="anonymous"></script>
     <title>myzk-ym.HP</title>
 
   </head>
