--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>生年月日　1998年 11月 19日</li>
             <li>出身　千葉</li>
             <li>六実→薬園台→青学</li>
-            <li>好きなもの　<span class="fa fa-instagram"></span>カレーうどん　ドライフルーツ　サウナ　映画</li>
+            <li>好きなもの　カレーうどん　ドライフルーツ　サウナ　映画</li>
             <li class="omoshiro"><a href="#">日本プラスチックバット野球連盟</a>理事　<a href="#">ワンツーノーバン日本代表</a></li>
           </ul>
         </div>
